--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "the-simple-next",
+  "name": "flaviane-alves",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,19 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "mongodb": "^3.6.6",
-    "mongoose": "^5.12.3",
     "next": "10.1.3",
-    "next-auth": "^3.14.6",
-    "next-connect": "^0.10.1",
     "next-images": "^1.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-particles-js": "^3.4.1",
     "react-scroll": "^1.8.2",
-    "styled-components": "^5.2.3",
-    "styled-reset": "^4.3.4"
+    "styled-components": "^5.2.3"
   }
 }
