--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^0.21.1",
     "mongodb": "^3.6.6",
     "next": "10.1.3",
     "next-images": "^1.7.0",
