--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-scroll": "^1.8.2",
+    "react-toastify": "^7.0.4",
     "styled-components": "^5.2.3"
   }
 }
